# VanillaSource

./: README.md  pom.xml
API/: pom.xml
Native/: Cargo.toml
Native/src/: collision.rs  lib.rs  minecraft.rs  pathfinding.rs
Native/src/collision/: collisions.rs
Native/src/minecraft/: blocks.rs  bounding_box.rs  chunk_util.rs  math.rs  worlds.rs
Native/src/pathfinding/: astar.rs
Native/src/util/: heap.rs
Plugin/: pom.xml
Plugin/src/main/resources/: config.yml  ja_JP.yml  plugin.yml
Plugin/src/main/resources/lang/: ja_JP.yml
thpmc/vanilla_source_api/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
thpmc/vanilla_source_api/0.0.1/: vanilla_source_api-0.0.1-javadoc.jar.md5  vanilla_source_api-0.0.1-javadoc.jar.sha1  vanilla_source_api-0.0.1.jar.md5  vanilla_source_api-0.0.1.jar.sha1  vanilla_source_api-0.0.1.pom  vanilla_source_api-0.0.1.pom.md5  vanilla_source_api-0.0.1.pom.sha1
thpmc/vanilla_source_api/0.0.2/: vanilla_source_api-0.0.2-javadoc.jar.md5  vanilla_source_api-0.0.2-javadoc.jar.sha1  vanilla_source_api-0.0.2.jar.md5  vanilla_source_api-0.0.2.jar.sha1  vanilla_source_api-0.0.2.pom  vanilla_source_api-0.0.2.pom.md5  vanilla_source_api-0.0.2.pom.sha1
thpmc/vanilla_source_api/0.0.3/: vanilla_source_api-0.0.3-javadoc.jar.md5  vanilla_source_api-0.0.3-javadoc.jar.sha1  vanilla_source_api-0.0.3.jar.md5  vanilla_source_api-0.0.3.jar.sha1  vanilla_source_api-0.0.3.pom  vanilla_source_api-0.0.3.pom.md5  vanilla_source_api-0.0.3.pom.sha1
v1_15_R1/: pom.xml
v1_16_R3/: pom.xml
v1_19_R1/: pom.xml
v1_20_R1/: pom.xml
(+327 files in other folders)
