[package]
name = "thpe_engine_library"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
jni = "0.12.3"
once_cell = "1.10.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false